--- a/index.html
+++ b/index.html
@@ -2,165 +2,151 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Geometry Learning Game</title>
+  <title>Geometry Battle</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background: linear-gradient(135deg, #a2c2e0, #f6f7fb);
+      background: linear-gradient(135deg, #89f7fe, #66a6ff);
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
       color: #333;
-      padding: 20px;
-    }
-    #game {
-      background: #fff;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      display: inline-block;
-      padding: 20px;
-      max-width: 500px;
-    }
-    img {
-      max-width: 180px;
-      margin: 10px auto;
-      display: block;
     }
     #question {
-      font-size: 20px;
-      margin-bottom: 10px;
+      font-size: 22px;
+      margin: 15px;
+    }
+    #shapeImage {
+      max-width: 200px;
+      max-height: 200px;
+      margin: 15px auto;
+      display: block;
+      border: 3px solid #333;
+      border-radius: 12px;
+      background: #fff;
+    }
+    input, button {
+      padding: 10px;
+      font-size: 18px;
+      margin: 8px;
+      border-radius: 8px;
+      border: none;
+    }
+    button {
+      background: #4CAF50;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #45a049;
     }
     #feedback {
+      font-size: 20px;
       margin-top: 15px;
       font-weight: bold;
-      font-size: 18px;
     }
     .correct {
       color: green;
-      animation: pop 0.6s ease;
+      animation: pop 0.5s ease;
     }
     .wrong {
       color: red;
+      animation: shake 0.3s ease;
     }
     @keyframes pop {
       0% { transform: scale(1); }
       50% { transform: scale(1.3); }
       100% { transform: scale(1); }
     }
-    input, button {
-      padding: 8px 12px;
-      margin-top: 8px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: 1px solid #aaa;
-    }
-    button {
-      cursor: pointer;
-      background: #4caf50;
-      color: white;
-      border: none;
-    }
-    button:hover {
-      background: #45a049;
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      75% { transform: translateX(5px); }
     }
   </style>
 </head>
 <body>
-  <h1>✨ Geometry Shape Challenge ✨</h1>
-  <div id="game">
-    <div id="question"></div>
-    <img id="shapeImage" src="" alt="Shape">
-    <input id="answer" type="text" placeholder="Type your answer here">
-    <br>
-    <button onclick="checkAnswer()">Submit</button>
-    <button onclick="newQuestion()">Next</button>
-    <div id="feedback"></div>
-    <p>Score: <span id="score">0</span></p>
-  </div>
+  <h1>✨ Geometry Battle ✨</h1>
+  <div id="question"></div>
+  <img id="shapeImage" src="" alt="Shape Image">
+  <input type="text" id="answer" placeholder="Type your answer">
+  <button id="submitBtn">Submit</button>
+  <div id="feedback"></div>
+  <h2>Score: <span id="score">0</span></h2>
 
   <script>
-    const shapes = [
+    const questions = [
       {
-        name: "Triangle",
-        feature: "3 sides",
-        img: "https://upload.wikimedia.org/wikipedia/commons/4/4f/Equilateral_triangle.svg"
+        question: "What shape is this?",
+        answer: "equilateral triangle",
+        image: "https://upload.wikimedia.org/wikipedia/commons/3/3f/Equilateral_triangle.svg"
       },
       {
-        name: "Square",
-        feature: "4 equal sides",
-        img: "https://upload.wikimedia.org/wikipedia/commons/3/3f/Simple_square.svg"
+        question: "How many sides does this shape have?",
+        answer: "4",
+        image: "https://upload.wikimedia.org/wikipedia/commons/3/3b/Square_-_black_simple.svg"
       },
       {
-        name: "Rectangle",
-        feature: "4 sides, opposite sides equal",
-        img: "https://upload.wikimedia.org/wikipedia/commons/4/45/Rectangle_geometry.svg"
+        question: "Name this shape:",
+        answer: "pentagon",
+        image: "https://upload.wikimedia.org/wikipedia/commons/0/0f/Regular_polygon_5_annotated.svg"
       },
       {
-        name: "Pentagon",
-        feature: "5 sides",
-        img: "https://upload.wikimedia.org/wikipedia/commons/5/5a/Regular_polygon_5_annotated.svg"
+        question: "How many sides does this shape have?",
+        answer: "6",
+        image: "https://upload.wikimedia.org/wikipedia/commons/3/3e/Regular_polygon_6_annotated.svg"
       },
       {
-        name: "Hexagon",
-        feature: "6 sides",
-        img: "https://upload.wikimedia.org/wikipedia/commons/3/38/Regular_polygon_6_annotated.svg"
-      },
-      {
-        name: "Circle",
-        feature: "No sides, round",
-        img: "https://upload.wikimedia.org/wikipedia/commons/3/3a/Circle_-_black_simple.svg"
+        question: "What shape is shown here?",
+        answer: "circle",
+        image: "https://upload.wikimedia.org/wikipedia/commons/0/0e/Circle_-_black_simple.svg"
       }
     ];
 
-    const compliments = [
-      "🌟 Brilliant! You nailed it!",
-      "👏 Awesome job!",
-      "🎉 Correct! Keep going!",
-      "💡 Smart thinking!",
-      "🔥 You're on fire!",
-      "✅ Spot on!"
-    ];
+    let score = 0;
+    let currentQuestion;
 
-    let currentShape, score = 0;
+    const questionEl = document.getElementById("question");
+    const shapeImage = document.getElementById("shapeImage");
+    const answerEl = document.getElementById("answer");
+    const feedback = document.getElementById("feedback");
+    const scoreEl = document.getElementById("score");
+
+    const praiseMessages = [
+      "🎉 Brilliant! Keep going!",
+      "🌟 You're a geometry star!",
+      "✅ Correct! You nailed it!",
+      "🔥 Fantastic! You're on fire!",
+      "💡 Smart thinking!"
+    ];
 
     function newQuestion() {
-      const qTypes = [
-        "What shape is shown?",
-        "How many sides does this shape have?",
-        "Which shape has this feature?"
-      ];
-      const qType = qTypes[Math.floor(Math.random() * qTypes.length)];
-      currentShape = shapes[Math.floor(Math.random() * shapes.length)];
-
-      document.getElementById("shapeImage").src = currentShape.img;
-
-      if (qType === "What shape is shown?") {
-        document.getElementById("question").textContent = qType;
-        currentShape.answer = currentShape.name.toLowerCase();
-      } else if (qType === "How many sides does this shape have?") {
-        document.getElementById("question").textContent = qType;
-        currentShape.answer = currentShape.feature.match(/\d+/) ? currentShape.feature.match(/\d+/)[0] : "0";
-      } else {
-        document.getElementById("question").textContent = `Which shape has this feature: ${currentShape.feature}?`;
-        currentShape.answer = currentShape.name.toLowerCase();
-        document.getElementById("shapeImage").src = ""; // Hide image for this type
-      }
-
-      document.getElementById("answer").value = "";
-      document.getElementById("feedback").textContent = "";
+      currentQuestion = questions[Math.floor(Math.random() * questions.length)];
+      questionEl.textContent = currentQuestion.question;
+      shapeImage.src = currentQuestion.image;
+      shapeImage.style.display = "block";
+      answerEl.value = "";
+      feedback.textContent = "";
     }
 
     function checkAnswer() {
-      const userAns = document.getElementById("answer").value.trim().toLowerCase();
-      if (userAns === currentShape.answer) {
+      const userAnswer = answerEl.value.trim().toLowerCase();
+      if (userAnswer === currentQuestion.answer.toLowerCase()) {
         score++;
-        document.getElementById("score").textContent = score;
-        const compliment = compliments[Math.floor(Math.random() * compliments.length)];
-        document.getElementById("feedback").textContent = compliment;
-        document.getElementById("feedback").className = "correct";
+        scoreEl.textContent = score;
+        feedback.textContent = praiseMessages[Math.floor(Math.random() * praiseMessages.length)];
+        feedback.className = "correct";
       } else {
-        document.getElementById("feedback").textContent = `❌ Oops! Correct answer: ${currentShape.answer}`;
-        document.getElementById("feedback").className = "wrong";
+        feedback.textContent = `❌ Oops! The correct answer was "${currentQuestion.answer}"`;
+        feedback.className = "wrong";
       }
+      setTimeout(newQuestion, 1500);
     }
+
+    document.getElementById("submitBtn").addEventListener("click", checkAnswer);
+    answerEl.addEventListener("keydown", e => { if (e.key === "Enter") checkAnswer(); });
 
     newQuestion();
   </script>
